[package]
name = "Argus"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
gstreamer = { version = "0.23", features = ["v1_20"] }
gstreamer-app = { version = "0.23", features = ["v1_20"] }
tokio = { version = "1.47", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
