[package]
name = "Argus"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "argus"
path = "src/main.rs"

[lib]
name = "argus"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
gstreamer = { version = "0.23", features = ["v1_20"] }
gstreamer-app = { version = "0.23", features = ["v1_20"] }
tokio = { version = "1.47", features = ["full"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
petgraph = { version = "0.6", features = ["serde-1"] }
thiserror = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
image = { version = "0.25", default-features = false, features = ["jpeg"] }
tokio-tungstenite = "0.26"
serialport = "4"

[dev-dependencies]
wiremock = "0.6"
mockall = "0.13"
tempfile = "3"
